# meteorica

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  COMPLETION.md  CONTRIBUTING.md  DEPLOY.md  DESCRIPTION.md  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  PROJECT_SUMMARY.md  PlagiarismCheckReport.md  README.md  README_PYPI.md  RELEASE_NOTES_v1.0.0.md  docker-compose.yml  mkdocs.yml  netlify.toml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-lock.txt  requirements-termux.txt  requirements.txt  setup.cfg  upload_meteorica.py
configs/: default.yaml  field_mode.yaml
docs/: METEORICA_Research_Paper.docx  index.md  installation.md
meteorica/: __init__.py  __version__.py  cli.py  emi.py
meteorica/classification/: __init__.py  cnn_classifier.py  metbull_export.py  spectral_preprocessing.py
meteorica/database/: __init__.py  specimen_registry.py
meteorica/fireball/: __init__.py  atp_realtime.py  network_integration.py
meteorica/parameters/: __init__.py  atp.py  cnea.py  iaf.py  mcc.py  pbdr.py  smg.py  twi.py
meteorica/utils/: __init__.py  concordia.py  isotope_space.py  mahalanobis.py
notebooks/: 01_quickstart.ipynb  02_emi_demo.ipynb
reports/: README.md
reports/daily/: 2026-02-20_daily.md  2026-02-20_daily.txt  2026-02-20_final_report.md  2026-02-20_final_report.txt
reports/exports/json/: 2026-02-20_daily.json
reports/templates/: alert_template.md  daily_template.md  monthly_template.md  weekly_template.md
scripts/: README.md  alert_manager.py  daily_copy.sh  export_reports.sh  generate_daily_reports.sh  generate_reports.py  weekly_cleanup.sh
tests/: run_tests.sh
tests/fixtures/: sample_specimen.json  sample_spectrum.csv
tests/integration/: test_full_pipeline.py
tests/unit/: test_cli.py  test_emi.py
tests/unit/parameters/: test_atp.py  test_cnea.py  test_iaf.py  test_mcc.py  test_pbdr.py  test_smg.py  test_twi.py
tests/unit/utils/: test_mahalanobis.py
