[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteorica"
version = "1.0.0"
description = "Celestial Messengers: A Comprehensive Physico-Chemical Framework for the Classification, Terrestrial Interaction, and Cosmochemical Significance of Extraterrestrial Materials"
readme = "README.md"
authors = [
    {name = "Samir Baladi", email = "gitdeeper@gmail.com"}
]
license = {text = "MIT"}
keywords = ["meteoritics", "cosmochemistry", "chondrites", "achondrites", "iron-meteorites", "planetary-science", "widmanstatten", "isotope-geochemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "astropy>=5.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0"
]
dashboard = [
    "streamlit>=1.28.0",
    "plotly>=5.15.0"
]

[project.urls]
homepage = "https://meteorica-science.netlify.app"
repository = "https://gitlab.com/gitdeeper07/meteorica"
documentation = "https://meteorica-science.netlify.app/documentation"
doi = "https://doi.org/10.14293/METEORICA.2026.001"

[tool.setuptools]
packages = ["meteorica"]

[tool.setuptools.dynamic]
version = {attr = "meteorica.__version__"}
