[metadata]
name = meteorica
version = attr: meteorica.__version__
url = https://meteorica-science.netlify.app
author = Samir Baladi
author_email = gitdeeper@gmail.com
maintainer = Samir Baladi
maintainer_email = gitdeeper@gmail.com
license = MIT
license_file = LICENSE
description = Celestial Messengers: A Comprehensive Physico-Chemical Framework for Extraterrestrial Materials
long_description = file: README.md
long_description_content_type = text/markdown
keywords = meteoritics, cosmochemistry, chondrites, achondrites, iron-meteorites, widmanstatten, isotope-geochemistry, planetary-science, impact-cratering
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Framework :: Pytest
    Natural Language :: English
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>=1.24.0
    scipy>=1.10.0
    pandas>=2.0.0
    scikit-learn>=1.3.0
    astropy>=5.3.0
    matplotlib>=3.7.0
    seaborn>=0.12.0
    pyyaml>=6.0
    python-dotenv>=1.0.0
    requests>=2.31.0
    click>=8.1.0
    rich>=13.0.0
    tqdm>=4.66.0
    python-dateutil>=2.8.2
python_requires = >=3.9
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    docs
    tests
    notebooks
    scripts

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.0
    ruff>=0.1.0
    black>=23.0.0
    mypy>=1.5.0
    pre-commit>=3.4.0
    isort>=5.12.0
docs =
    mkdocs>=1.5.0
    mkdocs-material>=9.4.0
    mkdocstrings[python]>=0.24.0
dashboard =
    streamlit>=1.28.0
    plotly>=5.15.0
all =
    %(dev)s
    %(docs)s
    %(dashboard)s

[options.entry_points]
console_scripts =
    meteorica = meteorica.cli:main
    meteorica-classify = meteorica.classification.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist

[isort]
profile = black
line_length = 88
known_first_party = meteorica

[bdist_wheel]
universal = 0
